Updated to include a finished dictionary for converting street abbreviations to their full names and vice versa, plus a save/load module that uses the Newtonsoft.Json library.

--- a/Assignment1/Assignment1.csproj
+++ b/Assignment1/Assignment1.csproj
@@ -49,6 +49,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\Visual Studio 2010\Projects\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SaveAndLoad.cs" />
     <Compile Include="StreetAddressConverter.cs" />
     <Compile Include="SavingsAccount.cs" />
     <Compile Include="SavingsInterface.cs" />
